--- a/style/index.scss
+++ b/style/index.scss
@@ -4,7 +4,20 @@ body {
 html {
     scroll-behavior: smooth;
 }
-
+#loader { 
+	border: 12px solid #f3f3f3; 
+	border-radius: 50%; 
+	border-top: 12px solid #444444; 
+	width: 70px; 
+	height: 70px; 
+	animation: spin 1s linear infinite; 
+} 
+  
+@keyframes spin { 
+	100% { 
+		transform: rotate(360deg); 
+	} 
+} 
 nav {
     .navbar-light {
         background-color: black !important;
