--- a/style/index.css
+++ b/style/index.css
@@ -14,6 +14,12 @@ html {
   height: 70px;
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 @-webkit-keyframes spin {
