--- a/style/index.scss
+++ b/style/index.scss
@@ -11,6 +11,13 @@ html {
 	width: 70px; 
 	height: 70px; 
 	animation: spin 1s linear infinite; 
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+  	
+	margin: auto;
 } 
   
 @keyframes spin { 
