--- a/style/index.scss
+++ b/style/index.scss
@@ -383,13 +383,13 @@ nav {
     form input[type="text"],
     form textarea {
         caret-color: #ff1e56;
-        color: #ff1e56;
+        color: #fff;
         font-family: "Spartan", sans-serif;
     }
     form input[type="email"],
     form textarea {
         caret-color: #ff1e56;
-        color: #ff1e56;
+        color: #fff;
         font-family: "Spartan", sans-serif;
     }
     /*     .submission {
