--- a/style/index.css
+++ b/style/index.css
@@ -468,14 +468,14 @@ nav .custom-toggler.navbar-toggler {
 #contact form input[type="text"],
 #contact form textarea {
   caret-color: #ff1e56;
-  color: #ff1e56;
+  color: #fff;
   font-family: "Spartan", sans-serif;
 }
 
 #contact form input[type="email"],
 #contact form textarea {
   caret-color: #ff1e56;
-  color: #ff1e56;
+  color: #fff;
   font-family: "Spartan", sans-serif;
 }
 
