--- a/style/index.scss
+++ b/style/index.scss
@@ -3,9 +3,19 @@ body {
 }
 .preloader-stuff{
     transition: none !important;
+    animation: none !important;
 }
 html {
     scroll-behavior: smooth;
+}
+body::-webkit-scrollbar{
+    width: 12px;
+}
+body::-webkit-scrollbar-thumb{
+    background: #ff1e56 !important;
+}
+body::-webkit-scrollbar-track{
+    background: #444444;
 }
 #loader { 
 	border: 12px solid #f3f3f3; 
