--- a/style/index.css
+++ b/style/index.css
@@ -149,7 +149,7 @@ nav .custom-toggler.navbar-toggler {
   margin-top: 50%;
   margin-left: 20%;
   color: #fff;
-  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff1e56, 0 0 0.5em #ff1e56, 0 0 0.1em #ff1e56, 0 10px 3px #000;
+  text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff1e56, 0 0 0.5em #ff1e56, 0 0 0.1em #ff1e56, 0 10px 3px #000;
   -webkit-animation: blink linear 3s;
           animation: blink linear 3s;
   -webkit-animation-delay: 0.5s;
@@ -185,7 +185,7 @@ nav .custom-toggler.navbar-toggler {
   font-size: 130%;
   line-height: 186%;
   letter-spacing: 0.115em;
-  color: #ffffff;
+  color: white;
 }
 
 #about .inner-material strong {
@@ -249,178 +249,105 @@ nav .custom-toggler.navbar-toggler {
   color: #ff1e56;
 }
 
-#projects .title-effection {
+#projects .project-list {
+  margin-top: 2%;
+}
+
+#projects .project-list .content {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+  margin: auto;
+  overflow: hidden;
+}
+
+#projects .project-list .content:hover .content-image {
+  -webkit-filter: brightness(30%);
+          filter: brightness(30%);
+}
+
+#projects .project-list .content-image {
+  width: 100%;
+}
+
+#projects .project-list .content-details {
+  position: absolute;
+  text-align: center;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+#projects .project-list .content-details .extra-contents {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#projects .project-list .content-details .extra-contents a {
+  margin: 10px;
+}
+
+#projects .project-list .content-details .extra-contents a:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+#projects .project-list .content:hover .content-details {
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
+
+#projects .project-list .content-details h3 {
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.15em;
+  margin-bottom: 0.5em;
+  text-transform: uppercase;
+}
+
+#projects .project-list .content-details p {
+  color: #fff;
+  font-size: 0.8em;
+}
+
+#projects .project-list .fadeIn-top {
+  top: 20%;
+}
+
+#projects .project-list .name-content {
+  margin-top: 3%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#projects .project-list .name-content .title-effection {
   font-family: "Spartan", sans-serif;
   font-style: normal;
-  font-weight: bold;
-  font-size: 180%;
+  font-weight: 500;
+  font-size: 120%;
   line-height: 186%;
   letter-spacing: 0.08em;
-  color: #ffffff;
-}
-
-#projects .card-projects {
-  margin-bottom: 5%;
-}
-
-#projects .card-projects .card {
-  background-color: #323232;
-  -webkit-transition: 0.3s all ease-in-out;
-  transition: 0.3s all ease-in-out;
-}
-
-#projects .card-projects .card:hover {
-  border: 1px solid white;
-  padding: 1%;
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
-}
-
-#projects .card-projects .card-title {
-  text-align: center;
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 110%;
-  line-height: 200%;
-  letter-spacing: 0.08em;
-  color: #ffffff;
-}
-
-#projects .card-projects .card-text {
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: lighter;
-  font-size: 85%;
-  line-height: 200%;
-  letter-spacing: 0.08em;
-  color: #ffffff;
-  text-align: justify;
-}
-
-#projects .card-projects .btn-primary {
-  width: auto;
-  height: auto;
-  background: #ff1e56;
-  border: none;
-  border-radius: 0px 20px;
-  padding: 15px 20px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 70%;
-  line-height: 130%;
-  letter-spacing: 0.08em;
-  -webkit-transition: 0.25s all ease-in;
-  transition: 0.25s all ease-in;
-}
-
-#projects .card-projects .btn-primary:hover {
-  background-color: #ffac41;
-  color: #323232;
-}
-
-#projects .card-projects .next-button {
-  width: auto;
-  height: auto;
-  background: #ffac41;
-  border: none;
-  border-radius: 20px 0px;
-  padding: 15px 20px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 70%;
-  line-height: 130%;
-  letter-spacing: 0.08em;
-  margin-left: 7%;
-}
-
-#projects .card-projects .next-button:hover {
-  background-color: #ff1e56;
-  color: #323232;
-}
-
-#projects .project-cat {
-  margin-bottom: 4%;
-}
-
-#projects .project-cat .project-section {
-  padding: 3%;
-  background: #323232;
-}
-
-#projects .project-cat .project-section .sub-parts {
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: lighter;
-  font-size: 110%;
-  line-height: 200%;
-  letter-spacing: 0.08em;
-  color: #ffffff;
-}
-
-#projects .project-cat img {
-  width: auto;
-}
-
-#projects .project-cat .view-code {
-  width: 100px;
-  height: 50px;
-  background: #ff1e56;
-  border-radius: 0px 20px;
-  padding: 15px 20px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 90%;
-  line-height: 130%;
-  letter-spacing: 0.08em;
-  margin-right: 3%;
-  -webkit-transition: all 0.25s ease-in;
-  transition: all 0.25s ease-in;
-}
-
-#projects .project-cat .view-code:hover {
-  background: #ffac41;
-  border: 0.1px solid white;
-}
-
-#projects .project-cat .run-code {
-  width: 100px;
-  height: 50px;
-  background: #ffac41;
-  border-radius: 20px 0px;
-  padding: 15px 20px;
-  color: white;
-  text-decoration: none;
-  text-align: center;
-  font-family: "Spartan", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 90%;
-  line-height: 130%;
-  letter-spacing: 0.08em;
-}
-
-#projects .project-cat .run-code:hover {
-  background: #ff1e56;
-  border: 0.1px solid white;
-}
-
-#projects .project-cat .video-mark img {
-  width: 100%;
-  height: 100%;
-  padding: 3%;
+  color: rgba(255, 255, 255, 0.95);
 }
 
 #contact {
