fast loading video size reduced

--- a/style/index.css
+++ b/style/index.css
@@ -411,7 +411,7 @@ nav .custom-toggler .icon-bar {
 }
 
 #projects .project-list .content-details .extra-contents a svg:hover path {
-  fill: #FF1E56;
+  fill: #ff1e56;
 }
 
 #projects .project-list .content:hover .content-details {
