--- a/style/index.scss
+++ b/style/index.scss
@@ -338,10 +338,10 @@ nav {
           &:hover {
             transform: scale(1.15);
           }
-          svg{
-            &:hover{
-              path{
-                fill: #FF1E56;
+          svg {
+            &:hover {
+              path {
+                fill: #ff1e56;
               }
             }
           }
